# supportops-agent-lab

./: .env.example  .gitignore  README.md  RULES.md  pyproject.toml  requirements.txt  run.py
exercises/: README.md
exercises/dia1/: ex00.md  ex01_mock_api.md  ex02_entrega.md  ex02_tool_design_403.md  ex03_schema_wrapper.md  ex04_prompt_carta.md  ex05_agent_loop.md  ex06_entrega.md  ex06_supportops_architecture.md  ex07_prompt_clinic.md  ex08_extra_cot_role_prompting.md
exercises/dia2/: ex08_memory_classification.md  ex09_rag_chunking.md  ex10_rag_retrieval.md  ex11_optional_query_rewriting_hyde.md  ex12_optional_rag_eval_manual.md
exercises/dia3/: ex11_guardrails.md  ex12_eval_dataset.md  ex13_deepeval.md
supportops_agent/: data_loader.py
supportops_agent/agent/: graph.py  nodes.py  output_schemas.py  prompts.py  state.py
supportops_agent/clients/: mock_service_client.py
supportops_agent/data/: audit_logs.json  deployments.json  eval_cases.json  feature_flags.json  incidents.json  permissions.json  roles.json  services.json  sla_policies.json  ticket_notes.json  tickets.json  users.json
supportops_agent/evals/: dataset.py  deepeval_runner.py
supportops_agent/llm/: base.py  fake_client.py  gemini_client.py
supportops_agent/mock_api/: schemas.py  server.py
supportops_agent/rag/: chunking.py  embeddings.py  faiss_store.py  loader.py  retrieval.py
tests/: test_ex00_setup.py  test_ex01_mock_api.py  test_ex03_schema_wrapper.py  test_ex05_agent_loop.py  test_ex10_rag_retrieval.py  test_ex11_guardrails.py  test_ex12_eval_dataset.py
(+7 files in other folders)
